# SimpleMario

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: Animation.h  Camera.h  CollisionSystem.h  EventBus.h  Events.h  GameEngine.h  SimpleNetwork.h  Timer.h  main.cpp  protocol.md
src/Asset/: config.json
src/Asset/SuperMario/source/data/player/: box.json  fireball.json
src/Components/: CameraComponent.h  GravityComponent.h  HealthBar.cpp  HealthBar.h  MarioCameraComponent.h  MarioController.cpp  MarioController.h  MoveComponent.cpp  MoveComponent.h
src/Components/CollisionHandles/: BoxCollisionHandle.cpp  BoxCollisionHandle.h  CircleCollisionHandle.cpp  CircleCollisionHandle.h  CollisionHandle.cpp  CollisionHandle.h
src/Components/Collisions/: BoxCollision.cpp  BoxCollision.h  CircleCollision.cpp  CircleCollision.h  Collision.h
src/GameObjects/: Box.cpp  Box.h  BoxGameObject.h  Brick.h  Button.cpp  Button.h  Circle.cpp  Circle.h  Cube3D.h  Cube3DWithController.h  FireBall.cpp  FireBall.h  GameObject.cpp  GameObject.h  GameObject3D.cpp  GameObject3D.h  Human3D.h  Mario.cpp  Mario.h  NetworkGameObject.h  NewModel3D.h  Penguin3D.h  Player.cpp  Player.h
src/Manager/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  FrameManager.cpp  FrameManager.h  Logger.h  ModelManager.cpp  ModelManager.h  SceneManager.h
src/Network/: ISerializable.h  NetworkManager.cpp  NetworkManager.h  NetworkProtocol.h  TcpClient.h
src/Scene/: GameScene.h  GameScene3D.h  MenuScene.h  Scene.h  SceneContext.h  SuperMarioScene.h  SuperMarioServerScene.h
src/State/: MarioDeadState.h  MarioIdleState.h  MarioJumpState.h  MarioRunState.h  StateMachine.h
