cmake_minimum_required(VERSION 3.20)

set(WIN_STATIC_LINK OFF)
set(BUILD_FOR_SERVER OFF)

if (BUILD_FOR_SERVER)
    message("Build for Server")
    project(GameEngineServer LANGUAGES CXX)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/server)
else ()
    message("Build for C/S")
    project(GameEngine LANGUAGES CXX)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
endif ()

# 设置 SFML 路径
if (WIN32)
    set(SFML_ROOT "./lib/SFML-2.6.1-gcc")
else ()
    set(SFML_ROOT "./lib/SFML-2.6.1-linux")
endif ()

if (WIN_STATIC_LINK)
    add_definitions(-DSFML_STATIC)
    set(CMAKE_EXE_LINKER_FLAGS "-static")
endif ()

set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)

file(GLOB_RECURSE SRC CONFIGURE_DEPENDS ${SRC_DIR}/*.cpp)

add_executable(${PROJECT_NAME} ${SRC})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
if (BUILD_FOR_SERVER)
    target_compile_definitions(${PROJECT_NAME} PRIVATE SERVER_BUILD)
endif ()
target_include_directories(
        ${PROJECT_NAME}
        PRIVATE
        ${SRC_DIR}
        ${SRC_DIR}/Components
        ${SRC_DIR}/Components/Collisions
        ${SRC_DIR}/Components/CollisionHandles
        ${SRC_DIR}/GameObjects
        ${SRC_DIR}/Scene
        ${SRC_DIR}/State
        ${SRC_DIR}/Manager
        ${SRC_DIR}/Network

        ${LIB_DIR}
        ${SFML_ROOT}/include
)

target_link_directories(
        ${PROJECT_NAME}
        PRIVATE
        ${SFML_ROOT}/lib
)

if (WIN32)
    if (WIN_STATIC_LINK)
        message("Static link")
        # Windows 下静态链接
        list(APPEND LINK_LIBRARIES
                debug sfml-audio-s-d
                debug sfml-graphics-s-d
                debug sfml-window-s-d
                debug sfml-network-s-d
                debug sfml-system-s-d

                optimized sfml-audio-s
                optimized sfml-graphics-s
                optimized sfml-window-s
                optimized sfml-network-s
                optimized sfml-system-s

                # OpenAL 音频库
                openal32
                # 音频编解码器库
                flac
                vorbisenc
                vorbisfile
                vorbis
                ogg
                # 其他依赖库
                freetype
                opengl32
                winmm
                ws2_32
        )
    else ()
        message("Dynamic link")
        list(APPEND LINK_LIBRARIES
                debug sfml-system-d
                debug sfml-network-d
                optimized sfml-system
                optimized sfml-network
        )
        if (NOT BUILD_FOR_SERVER)
            list(APPEND LINK_LIBRARIES
                    debug sfml-graphics-d
                    debug sfml-window-d
                    debug sfml-audio-d
                    optimized sfml-graphics
                    optimized sfml-window
                    optimized sfml-audio
            )
        endif ()
    endif ()
else ()
    list(APPEND LINK_LIBRARIES
            sfml-system
            sfml-network
    )
    if (NOT BUILD_FOR_SERVER)
        list(APPEND LINK_LIBRARIES
                sfml-graphics
                sfml-window
                sfml-audio
        )
    endif ()
endif ()

target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBRARIES})

if (NOT BUILD_FOR_SERVER)
    add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_directory
            ${SRC_DIR}/Asset/
            $<TARGET_FILE_DIR:GameEngine>/Asset
    )
endif ()